Prevent actions box download labels from wrapping

--- a/app/assets/stylesheets/arclight/modules/layout.scss
+++ b/app/assets/stylesheets/arclight/modules/layout.scss
@@ -44,6 +44,7 @@
 
   &-downloads {
     padding-top: $spacer * .25;
+    white-space: nowrap;
 
     &-container {
       margin-top: $spacer * .5;
